--- a/TrainingExamples/TrainingExamples/TrainingExamples.csproj
+++ b/TrainingExamples/TrainingExamples/TrainingExamples.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="ModelViews\" />
-    <Folder Include="Views\" />
+    <EmbeddedResource Update="Views\ClientViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
